# hmm-hydra-swap

./: .eslintrc.json  .gitignore  .prettierignore  .trojansourcedetector.json  CHANGELOG.md  LICENSE.md  README.md  app.fleek.json  codemod.sh  devnet.fleek.json  docs-devnet.fleek.json  docs.fleek.json  package.json  prettier.config.js  turbo.json  turbo.sh  val.json
.devcontainer/: .gitignore  .vscode_aliases.example  devcontainer.json
.github/: pull_request_template.md
.husky/: pre-commit
app/: .gitignore  README.md  config-overrides.js  jest.config.js  package.json  tsconfig.json
docker/: README.md
modules/core/modules/hydra-math/: Cargo.toml  package.json  readme.md
modules/core/modules/hydra-math/benches/: ln_benchmark.rs  pow_benchmark.rs  sqrt_benchmark.rs
modules/core/modules/hydra-math/proptest-regressions/decimal/: base.txt
modules/core/modules/hydra-math/proptest-regressions/decimal/ops/: ln.txt
modules/core/modules/hydra-math/src/: errors.rs  lib.rs
modules/core/modules/hydra-math/src/decimal/: base.rs  mod.rs
modules/core/modules/hydra-math/src/decimal/core/: cmp.rs
modules/core/modules/hydra-math/src/decimal/ops/: add.rs  ln.rs  log_10.rs  log_2.rs  sqrt.rs  sub.rs
modules/core/modules/hydra-math/src/programs/: mod.rs
modules/core/modules/hydra-math/src/programs/fees/: fee_calculator.rs  fee_calculator_wasm.rs  fee_result.rs  mod.rs
modules/core/modules/hydra-math/src/programs/liquidity_pools/: liquidity_calculator.rs  liquidity_calculator_wasm.rs  liquidity_result.rs  mod.rs  swap_calculator.rs  swap_calculator_scale.rs  swap_calculator_wasm.rs  swap_result.rs
modules/core/modules/hydra-math/src/programs/tests/: e2e_integration_tests.rs  fee_edge_tests.rs  fee_integration_tests.rs  fee_range_tests.rs  liquidity_edge_tests.rs  liquidity_integration_tests.rs  liquidity_range_tests.rs  mod.rs  swap_edge_tests.rs  swap_integration_tests.rs  swap_range_tests.rs
modules/core/programs/hydra-benchmarks/: Cargo.toml
modules/core/programs/hydra-benchmarks/src/: lib.rs
modules/core/programs/hydra-faucet/: Cargo.toml
modules/core/programs/hydra-faucet/src/: lib.rs
modules/core/programs/hydra-faucet/src/errors/: mod.rs
modules/core/programs/hydra-faucet/src/instructions/: init_faucet.rs  mint_token.rs  mod.rs
modules/core/programs/hydra-faucet/src/state/: faucet_state.rs  mod.rs
modules/core/programs/hydra-liquidity-pools/: Cargo.toml
modules/core/programs/hydra-liquidity-pools/src/: errors.rs  lib.rs
modules/core/programs/hydra-liquidity-pools/src/access_controls/: add_liquidity_enabled.rs  create_public_pool_enabled.rs  mints_keys.rs  mod.rs  pool_admin.rs  prices_keys.rs  prices_owner.rs  remove_liquidity_enabled.rs  swap_enabled.rs
modules/core/programs/hydra-liquidity-pools/src/events/: liquidity_added.rs  liquidity_removed.rs  slippage_exceeded.rs
modules/core/programs/hydra-liquidity-pools/src/instructions/: add_liquidity.rs  initialize_global_state.rs  initialize_pool_state.rs  mod.rs  remove_liquidity.rs  set_c_value.rs  set_feature.rs  set_fees.rs  set_limits.rs  set_prices_owner.rs  swap.rs  transfer_global_admin.rs  transfer_pool_admin.rs
modules/core/programs/hydra-liquidity-pools/src/state/: fees.rs  global_state.rs  limits.rs  mod.rs  pool_state.rs  prices.rs
modules/math-simulator/: Cargo.toml  README.md  model.py  simulation.py
modules/math-simulator/benches/: decimal.rs  sqrt.rs
modules/math-simulator/src/: lib.rs
(+592 files in other folders)
