[package]
name = "math-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.13.2"

[dev-dependencies]
bencher = "0.1.5"
checked_decimal_macro = "0.1.4"
hydra-math = { path = "../core/modules/hydra-math", features = [
  "no-entrypoint",
] }
integer-sqrt = "0.1.5"

[[bench]]
name = "sqrt"
harness = false
