[package]
name = "hydra-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
production = []

[dependencies]
wasm-bindgen = "0.2.79"
ndarray = "0.15.4"
thiserror = "1.0.24"
derive_builder = "0.11.1"
num-traits = "0.2.15"
uint = "0.9"

[dev-dependencies]
proptest = { version = "1.0.0" }
math-simulator = { version = "0.1.0", path = "../../../math-simulator" }
criterion = "0.3.6"
csv = "1.1"
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.12.0", features = ["json"] }
serde_json = "1.0.59"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "ln_benchmark"
harness = false

[[bench]]
name = "sqrt_benchmark"
harness = false

[[bench]]
name = "pow_benchmark"
harness = false
